syntax = "proto3";

package resources.file;

import "buf/validate/validate.proto";
import "resources/file/meta.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/file;file";

message File {
  optional int64 parent_id = 1 [(buf.validate.field).int64.gt = 0];
  int64 id = 2 [(buf.validate.field).int64.gt = 0];
  string file_path = 3;
  optional resources.timestamp.Timestamp created_at = 4;
  int64 byte_size = 5; // Bytes stored
  string content_type = 6;

  optional FileMeta meta = 7;
  bool is_dir = 8;
}
